<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.ifolks.commons</groupId>
	<artifactId>commons-root</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>iFolks Commons</name>
	<description>Root module of iFolks Commons</description>
	<url>http://ifolks-open-source-community.github.io/ifolks-commons</url>

	<packaging>pom</packaging>
	
	<parent>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-parent</artifactId>
	    <version>4.0.6</version>
	</parent>

	<modules>
		<module>commons-text</module>
		<module>commons-entities</module>
		<module>commons-api</module>
		<module>commons-crypto</module>
		<module>commons-aop</module>
		<module>commons-log</module>
		<module>commons-jms</module>
		<module>commons-rest-security</module>
		<module>commons-rest</module>
		<module>commons-rest-client</module>
		<module>commons-soap</module>
	</modules>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>nthibault</id>
			<name>Nicolas Thibault</name>
			<email>nicolas.thibault@ymail.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com/ifolks-open-source-community/ifolks-commons.git</connection>
		<developerConnection>scm:git:git@github.com/ifolks-open-source-community/ifolks-commons.git</developerConnection>
		<url>git@github.com/ifolks-open-source-community/ifolks-commons.git</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<encoding>UTF-8</encoding>
		<java.version>21</java.version>
		<maven.compiler.release.version>21</maven.compiler.release.version>
		
		<commons.codec.version>1.9</commons.codec.version>
		<java-jwt.version>3.4.1</java-jwt.version>
		<bouncycastle.version>1.61</bouncycastle.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.ifolks.commons</groupId>
				<artifactId>commons-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.ifolks.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.ifolks.commons</groupId>
				<artifactId>commons-entities</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.ifolks.commons</groupId>
				<artifactId>commons-crypto</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.ifolks.commons</groupId>
				<artifactId>commons-aop</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.ifolks.commons</groupId>
				<artifactId>commons-log</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.ifolks.commons</groupId>
				<artifactId>commons-rest-security</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<!-- commons -->
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons.codec.version}</version>
			</dependency>			
			
			<!-- java-jwt -->
			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>${java-jwt.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk15on</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>
			
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<verbose>true</verbose>
					<fork>true</fork>
					<release>${maven.compiler.release.version}</release>
					<encoding>${encoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
                    				<additionalparam>-Xdoclint:none</additionalparam>
                				</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
